# word_of_wisdom

./: Cargo.toml  README.md
src/: main.rs
tests/: test.rs
