[package]
name = "word_of_wisdom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tcpserver = "1.3.0"
rust-hashcash = "0.3.3"
tokio = { version = "1.17.0", features = ["full"] }
anyhow = "1.0.56"
rand = "0.8.5"
